feat(check): added formatted message field to claim checking
